# taturtle

./: .gitignore  LICENSE  README.md  meta.yaml  pyproject.toml
.github/workflows/: check.yml
src/: autocrop.py  main.py  template_matching.py  thickness_correction.py  utils.py
src/taturtle/: __init__.py  __main__.py  __version__.py  autocrop.py  isotonic_regression.py  region.py  template_matching.py  thickness_correction.py  utils.py
tests/: test_autocrop.py  test_isotonic_regression.py  test_thickness_corr.py  test_utils.py  tests_autocrop.py  tests_thickness_corr.py  tests_utils.py
tests/data/: black-offset-1-expected.tif  black-offset-1.tif
