[project]
name = "taturtle"
dynamic = ["version"]
description = "Alignment of FIB-SEM images using template matching and thickness correction."
authors = [
    {name = "Tatiana Woller", email = "tatiana.woller@vib.be"},{name = "Benjamin Pavie", email = "benjamin.pavie@vib.be"}
]
dependencies = ["numpy>=2.2.6", "scikit-image>=0.25.2", "tifffile>=2025.5.26", "scipy>=1.15.3"]
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "GPL-3.0-only"}

[project.urls]
Homepage = "https://github.com/vib-bic-code/taturtle"
Issues = "https://github.com/vib-bic-code/taturtle/issues"

[project.scripts]
taturtle = "taturtle.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
version = { source = "file", path = "src/taturtle/__version__.py" }

[tool.ruff.format]
line-ending = "lf"

# See: https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D212", "EM", "S101", "G004", "TRY003", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D", "SLF", "PLR2004"]

[dependency-groups]
dev = [
    "scipy-stubs>=1.15.3.0",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
    "mypy>=1.16.0",
]
